Fixed drop down menus to show text and not overlap

--- a/clientside/src/scss/frontend/elements/inputs/custom-bot-select.scss
+++ b/clientside/src/scss/frontend/elements/inputs/custom-bot-select.scss
@@ -47,7 +47,7 @@
 			>.item {		
 				color: get-contrasting-text-color($background) !important;
 				border: none;
-				padding: $space-xs $space-sm !important;
+				padding: calc(2 * 1rem) calc(1.5 * 1rem) !important;
 			}
 			.selected.item, .selected {
 			}
